[gd_scene load_steps=14 format=2]

[ext_resource path="res://Boxes/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Enemies/earth.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Word.gd" type="Script" id=3]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Boxes/SoftCollision.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/COMICBD.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Boxes/HurtBox.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18.6364, 3.63636 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 20.4545, 4.54545 )

[sub_resource type="CircleShape2D" id=3]
radius = 805.76

[sub_resource type="CircleShape2D" id=4]
radius = 53.1507

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 112.5, 25 )

[node name="word" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_mask = 9
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.5, 1.19209e-06 )
scale = Vector2( 5.5, 5.5 )
shape = SubResource( 8 )
one_way_collision = true

[node name="TheWord" type="RichTextLabel" parent="."]
margin_left = -125.0
margin_top = -85.0
margin_right = 180.0
margin_bottom = 60.0
custom_fonts/normal_font = SubResource( 5 )
bbcode_enabled = true
bbcode_text = "Hello"
text = "Hello"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -1.81899e-12 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 1 )]
collision_mask = 16

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -2.5, 2.38418e-06 )
scale = Vector2( 5.5, 5.5 )
shape = SubResource( 7 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
visible = false
collision_mask = 2

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="SoftCollision" parent="." instance=ExtResource( 5 )]
visible = false

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 4 )

[node name="HurtBox" parent="." instance=ExtResource( 7 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -2.50002, 1.72853e-06 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 6 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]

[editable path="HitBox"]
[editable path="PlayerDetectionZone"]
[editable path="SoftCollision"]
[editable path="HurtBox"]
